2779 [Xvid]                 added a workaround to be able to use Xvid in portable AviSynth mode
2778 [Chapter]              fixed non-ASCII handling (regression of 2753). bug #898
2777 [Settings]             changed the default value of "delete completed jobs" to be enabled
2776 [OneClick]             added support for MKV attachments. If the MKV source does have such attachments, it will be copied to the target MKV. feature request #617

Changelog 2715 --> 2774

Features/Changes:
[Chapter]              all MediaInfo supported files and TXT/XML files can be used as chapter files. The muxers will use chapter information from the input video file if available.
                       !!! existing jobs created by older MeGUI builds have to be recreated as otherwise the chapter information is not available !!!
[HD Streams Extractor] added settings menu:
                       - added settings to include the encoding and/or all demuxer "extract as" options. AAC encoding is only available if neroaacenc.exe is found in the eac3to directory.
                       - moved the language track selection option from the global settings into the new menu
                       - added option to select by default the (non-)HD tracks (defaults to non-HD)
					   removed the DTSHD "extract as" option and added the DTS_CORE option
[OneClick]             removed the "Anamorph Output" option from the OneClick profile. Please use the anamorphic encoding options in the AviSynth profile instead.
                       added aspect ratio selection to the OneClick profile
[Main]                 if not at least AviSynth 2.6 is installed the portable build will be used
[Muxer]                added/improved aspect ratio writing (all muxers except the AVI muxer). Therefore the aspect ratio of the video track will be used if not forced by other tools (e.g. OneClick).

Enhancements/Fixes:
[FFMS Indexer]         enabled AVI file handling