@@ -1,3 +1,4 @@
+2780 [Update]               removed the abort button
 2779 [Xvid]                 added a workaround to be able to use Xvid in portable AviSynth mode
 2778 [Chapter]              fixed non-ASCII handling (regression of 2753). bug #898
 2777 [Settings]             changed the default value of "delete completed jobs" to be enabled
